# android_packages_apps_Recorder

./: .bazelproject  .gitignore  AppManifest.xml  BUILD.bazel  WORKSPACE
.github/workflows/: bazel.yml
app/: build.gradle
app/src/main/: Android.bp  AndroidManifest.xml  BUILD.bazel
app/src/main/java/org/lineageos/recorder/: ListActivity.java  RecorderActivity.java
app/src/main/java/org/lineageos/recorder/service/: SoundRecorderService.java
app/src/main/java/org/lineageos/recorder/ui/: SpringFrameLayout.java
app/src/main/java/org/lineageos/recorder/utils/: LastRecordHelper.java  Utils.java
app/src/main/res/drawable/: ic_cancel.xml  ic_confirm.xml  switch_thumb_selector.xml  switch_track_selector.xml
app/src/main/res/layout/: activity_list.xml  activity_main.xml  dialog_content_settings.xml
app/src/main/res/values/: strings.xml
