#
# Copyright (C) 2021 The LineageOS Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
android_library(
    name = "main",
    manifest = "AndroidManifest.xml",
    srcs =  glob([
        "java/org/lineageos/recorder/**/*.java",
        "gen/**/*.java",
    ]),
    resource_files = glob([
        "res/**",
    ]),
    custom_package = "org.lineageos.recorder",
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_cardview_cardview",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_coordinatorlayout_coordinatorlayout",
        "@maven//:androidx_core_core",
        "@maven//:androidx_dynamicanimation_dynamicanimation",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:com_google_android_material_material",
    ],
)
